# moonteargui

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
.github/workflows/: cmake.yml
VS2015/: Saphire.sln
VS2015/SDL/: SDL.vcxproj  SDL.vcxproj.filters
VS2015/SDL2_ttf/: SDL2_ttf.vcxproj  SDL2_ttf.vcxproj.filters
VS2015/SDL_Image/: SDL_Image.vcxproj  SDL_Image.vcxproj.filters
VS2015/SDL_Image/SDL_Image/: SDL_Image.vcxproj
VS2015/Saphire/: Saphire.vcxproj  Saphire.vcxproj.filters
VS2015/freetype2/: freetype2.vcxproj  freetype2.vcxproj.filters
VS2015/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
VS2015/libpng/: libpng.vcxproj  libpng.vcxproj.filters
VS2015/pthreads2/: pthreads2.vcxproj  pthreads2.vcxproj.filters
VS2015/pthreads2/x64/Release/pthreads2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  pthreads2.lastbuildstate
VS2015/pugixml/: pugixml.vcxproj  pugixml.vcxproj.filters
VS2015/pugixml/x64/Debug/: pugixml.idb
VS2015/pugixml/x64/Debug/pugixml.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  pugixml.lastbuildstate
VS2015/pugixml/x64/Release/pugixml.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  pugixml.lastbuildstate
VS2015/winposix/: winposix.vcxproj  winposix.vcxproj.filters
VS2015/winposix/x64/Release/winposix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
VS2015/zlib/: zlib.vcxproj  zlib.vcxproj.filters
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
res/txt/: TestText01.xml
src/: Animation.h  AnimationManager.cpp  AnimationManager.h  BitmapResource.cpp  BitmapResource.h  ColorPoint.h  Drawable.h  FontResource.cpp  FontResource.h  GraphicsEngine.cpp  GraphicsEngine.h  Image.cpp  Image.h  Pixmap.cpp  Pixmap.h  Plot.cpp  Plot.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourcePack.cpp  ResourcePack.h  ResourceTypes.h  RootWindow.cpp  RootWindow.h  SDLDeleter.h  SDLFRect.cpp  SDLFRect.h  SDLRect.cpp  SDLRect.h  SDLRenderer.cpp  SDLRenderer.h  SDLSurface.cpp  SDLSurface.h  SDLTexture.cpp  SDLTexture.h  SDLWindow.cpp  SDLWindow.h  TTFFont.cpp  (+15 more)
src/libjpeg/: jconfig.h
test/: animation_simple.cpp  bench_drawing.cpp  pixmap_test.cpp  plot_test.cpp  smoketest.cpp
